[package]
name = "string-simple"
version = "0.1.0"
edition = "2021"
description = "A library containing some simple string utilities that I use in my other projects."
repository = "https://github.com/KalevGonvick/string-simple"
license-file = "LICENSE"

categories = [
    "algorithms",
    "text-processing"
]

keywords = [
    "text",
    "utility",
    "string",
    "string-manipulation"
]
readme = "README.md"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = 3

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "string_simple_benchmarks"
harness = false

[dependencies]
#packed_simd = "0.3.9"
